frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*
 * Fix mobile issue on webkit
 * See: https://css-tricks.com/css-fix-for-100vh-in-mobile-webkit/
 */
body {
    min-height: 100vh;
    min-height: -webkit-fill-available;
}
html {
    height: -webkit-fill-available;
}

@keyframes spinner {
    to {transform: rotate(360deg);}
}

.spinner:before {
    content: '';
    box-sizing: border-box;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 20px;
    height: 20px;
    margin-top: -10px;
    margin-left: -10px;
    border-radius: 50%;
    border-top: 2px solid #07d;
    border-right: 2px solid transparent;
    animation: spinner .6s linear infinite;
}

/** Notifications */
.notifications-arrow {
    position: absolute;
    top: 27px;
    border: 1px solid #efefef;
    width: 15px;
    height: 15px;
    transform: rotate(45deg);
    left: 3px;
    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.0975);
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.0975);
}

.notifications-arrow-cover {
    position: absolute;
    top: 29px;
    background-color: white;
    width: 15px;
    height: 15px;
    transform: rotate(45deg);
    left: 3px;
    z-index: 30;
}

.notifications-overlay {
    position: absolute;
    top: 35px;
    min-height: 100px;
    max-height: 400px;
    overflow-y: scroll;
    background-color: white;
    border: 1px solid #efefef;
    border-radius: 3px;
    margin-left: -450px;
    width: 500px;
    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.0975);
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.0975);

    display: grid;
    grid-template-rows: auto;
    grid-auto-rows: auto;
}

.notification-item {
    z-index: 40;
    display: grid;
    grid-template-columns: auto 1fr auto;
    align-items: center;
    padding: 15px;
    overflow: hidden;
}

.notification-item:hover {
     background-color: #efefef;
     cursor: pointer;
 }

.notification-item .user-sm {
    width: 30px;
    height: 30px;
    object-fit: cover;
}

.notification-item .round {
    border-radius: 50%;
}

.notification-item .post-thumb {
    width: 40px;
    height: 40px;
    object-fit: cover;
}

.notification-item .description {
    margin: 0 10px;
}
.notification-item .description span {
    display: inline-block;
    margin: 0 2px;
}
.notification-item .description .content {
    font-size: 14px;
}

.notification-item .description .time {
    font-size: 12px;
    color: #999999;
}

.notification-sheet {
    position: fixed;
    z-index: 99;
    bottom: 16px;
    right: 16px;
    width: 320px;
}

@media screen and (max-width: 640px) {
    .notification-sheet {
        width: 270px;
    }
}

.notification-sheet .notification-sheet-item {
    position: relative;
    width: 100%;
    padding: 16px;
    margin-bottom: 8px;
    background-color: #222;
    color: white;
    border-radius: 3px;
}
.notification-sheet .notification-sheet-item .progress {
    position: absolute;
    bottom: 0;
    height: 8px;
    background-color: #3897f0;
    left: 0;
    right: 100%;
}

.notification-sheet .notification-sheet-item.is-error {
    background-color: #ed4956;
}

.notification-sheet .notification-sheet-item.is-error .progress {
    background-color: #ffbaba;
}

.side-menu {
    width: 250px;
    min-width: 250px;
    z-index: 5;
    transform: translateX(0);
    transition: transform 300ms;
    position: fixed;
    left: -250px;
    bottom: 0;
    top: 0;
}

.side-menu ~ .menu-overlay {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 2;
    background-color: rgba(1,1,1,.5);
}

.side-menu.side-menu--mobile-shown {
    transform: translateX(250px);
}

.side-menu.side-menu--desktop {
    transform: translateX(0);
    position: relative;
    left: unset;
    bottom: unset;
    top: unset;
}
.side-menu-btn {
    right: -30px;
    bottom: 8px;
}

.side-menu-btn.menu-btn-hidden {
    display: none;
}

